--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -1,34 +1,52 @@
-name: CI
+name: CI - Build Angular + Spring Boot and Push Docker Image
 
 on:
   push:
     branches:
       - main
+  workflow_dispatch:
 
 jobs:
-  build:
+  build-and-push:
     runs-on: ubuntu-latest
 
     steps:
       - name: Checkout code
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
 
       - name: Set up JDK 17
-        uses: actions/setup-java@v2
+        uses: actions/setup-java@v3
         with:
-          java-version: '17'
           distribution: 'temurin'
+          java-version: '17'
 
-      - name: Set up Node.js
-        uses: actions/setup-node@v2
+      - name: Set up Node.js 14
+        uses: actions/setup-node@v4
         with:
           node-version: '14'
 
-      - name: Navigate to Frontend directory
-        run: cd Frontend
-
-      - name: Install Angular CLI and Dependencies
+      - name: Install Angular CLI and build frontend
+        working-directory: ./Frontend
         run: |
           npm install -g @angular/cli
           npm install
+          ng build --configuration production
 
+      - name: Build Spring Boot backend
+        run: mvn clean package -DskipTests
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Log in to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+
+      - name: Build and push Docker image
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          push: true
+          tags: your-dockerhub-username/your-image-name:latest
