--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -1,9 +1,9 @@
-name: CI - Build Angular + Spring Boot and Push Docker Image
+name: Build and Push Spring Boot Docker Image
 
 on:
   push:
     branches:
-      - main
+      - main  # or your preferred deployment branch
   workflow_dispatch:
 
 jobs:
@@ -11,39 +11,33 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      # Step 1: Checkout code
       - name: Checkout code
         uses: actions/checkout@v4
 
+      # Step 2: Set up Java (JDK 17 for Spring Boot)
       - name: Set up JDK 17
         uses: actions/setup-java@v3
         with:
-          distribution: 'temurin'
           java-version: '17'
+          distribution: 'temurin'
 
-      - name: Set up Node.js 14
-        uses: actions/setup-node@v4
-        with:
-          node-version: '14'
-
-      - name: Install Angular CLI and build frontend
-        working-directory: ./Frontend
-        run: |
-          npm install -g @angular/cli
-          npm install
-          ng build --configuration production
-
-      - name: Build Spring Boot backend
+      # Step 3: Build the Spring Boot app
+      - name: Build with Maven
         run: mvn clean package -DskipTests
 
+      # Step 4: Set up Docker Buildx
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
+      # Step 5: Login to Docker Hub
       - name: Log in to Docker Hub
         uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
+      # Step 6: Build and push Docker image
       - name: Build and push Docker image
         uses: docker/build-push-action@v5
         with:
