--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -3,7 +3,7 @@ name: Build and Push Spring Boot Docker Image
 on:
   push:
     branches:
-      - main  # or your preferred deployment branch
+      - main
   workflow_dispatch:
 
 jobs:
@@ -11,36 +11,31 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      # Step 1: Checkout code
       - name: Checkout code
         uses: actions/checkout@v4
 
-      # Step 2: Set up Java (JDK 17 for Spring Boot)
       - name: Set up JDK 17
         uses: actions/setup-java@v3
         with:
           java-version: '17'
           distribution: 'temurin'
 
-      # Step 3: Build the Spring Boot app
-      - name: Build with Maven
+      - name: Build Spring Boot project with Maven
+        working-directory: ./Backend
         run: mvn clean package -DskipTests
 
-      # Step 4: Set up Docker Buildx
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
-      # Step 5: Login to Docker Hub
       - name: Log in to Docker Hub
         uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
-      # Step 6: Build and push Docker image
       - name: Build and push Docker image
         uses: docker/build-push-action@v5
         with:
-          context: .
+          context: ./Backend
           push: true
           tags: your-dockerhub-username/your-image-name:latest
