--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -38,4 +38,4 @@ jobs:
         with:
           context: ./Backend
           push: true
-          tags: your-dockerhub-username/your-image-name:latest
+          tags: ${{ secrets.DOCKER_USERNAME }}/quiz-backend:latest
