--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -34,8 +34,12 @@ jobs:
           password: ${{ secrets.DOCKER_PASSWORD }}
 
       - name: Build and push Docker image
-        uses: docker/build-push-action@v5
+        uses: docker/build-push-action@v6
         with:
           context: ./Backend
+          file: ./Backend/Dockerfile
           push: true
-          tags: ${{ secrets.DOCKER_USERNAME }}/quiz-backend:latest
+          tags: 
+            ${{ secrets.DOCKER_USERNAME }}/quiz-backend:latest
+            ${{ secrets.DOCKER_USERNAME }}/quiz-backend:${{ github.sha }}
+          
