Update CI.yml docker build

--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -39,7 +39,4 @@ jobs:
           context: ./Backend
           file: ./Backend/Dockerfile
           push: true
-          tags: 
-            ${{ secrets.DOCKER_USERNAME }}/quiz-backend:latest
-            ${{ secrets.DOCKER_USERNAME }}/quiz-backend:${{ github.sha }}
-          
+          tags: ${{ secrets.DOCKER_USERNAME }}/quiz-backend:latest,${{ secrets.DOCKER_USERNAME }}/quiz-backend:${{ github.sha }}
