--- a/Frontend/Dockerfile
+++ b/Frontend/Dockerfile
@@ -13,7 +13,7 @@ RUN npm run build --prod
 
 FROM nginx:alpine
 
-COPY --from=builder /app/dist/<your-angular-app-name> /usr/share/nginx/html
+COPY --from=builder /app/dist/frontend /usr/share/nginx/html
 
 EXPOSE 80
 
